# technical-analysis

./: .eslintignore  .eslintrc.js  .gitignore  atr.js  atr.test.js  averageGain.js  averageGain.test.js  babel.config.js  bollingerBands.js  bollingerBands.test.js  package-lock.json  package.json  pmax.test.js  readme.md  stdev.js  stdev.test.js  stochastic.test.js  trueRange.js  trueRange.test.js  tsconfig.json  vwap.js
backend/: .gitignore  app.py  package-lock.json  package.json  pyproject.toml  schema.gql  tsconfig.json
backend/indicators/: cors.py  main.py  options.py  pyproject.toml
backend/indicators/indicators/: pmax.py
backend/indicators/indicators/trend/: pmax.py
backend/indicators/indicators/volume/: heatmap_volume.py  vader.py
backend/indicators/notebooks/: get_candles.py  pmax_helpers.py  pmax_run_up.ipynb  rsi_run_up.ipynb  run_up.ipynb  squeeze_run_up.ipynb
backend/src/: app.module.ts  config.ts
backend/src/helpers/: randomString.ts  withCancel.ts
backend/src/modules/algorithmTesting/: algorithmTesting.entity.ts  algorithmTesting.helpers.ts  algorithmTesting.module.ts  algorithmTesting.resolver.ts  algorithmTesting.service.ts
backend/src/modules/binance/: binance.entity.ts  binance.module.ts  binance.resolver.ts  binance.service.ts
backend/src/modules/candle/: candle.module.ts  candle.resolver.ts  candle.service.ts  candle.types.ts
backend/src/modules/indicator/: indicator.entity.ts  indicator.module.ts  indicator.resolver.ts  indicator.service.ts  indicator.types.ts
backend/src/modules/shape/: shape.entity.ts  shape.module.ts  shape.resolver.ts  shape.service.ts  shape.types.ts
backend/src/modules/source/: source.entity.ts  source.module.ts  source.resolver.ts  source.service.ts  source.types.ts
backend/src/modules/tinkoff/: tinkoff.module.ts  tinkoff.resolver.ts  tinkoff.service.ts
backend/src/modules/tipranks/: tipranks.module.ts  tipranks.resolver.ts  tipranks.service.ts  tipranks.types.ts
backend/src/modules/tradingview/: tradingview.module.ts  tradingview.resolver.ts  tradingview.service.ts  (+1 more)
(+172 files in other folders)
