[tool.poetry]
name = "indicators"
version = "0.1.0"
description = ""
authors = ["Alexey Duryagin <aiduryagih@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas-ta = "^0.3.14-beta.0"
sanic = "^21.12.1"
tinvest = "^3.0.5"
arrow = "^1.2.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.1"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
