[tool.poetry]
name = "indicators"
version = "0.1.0"
description = ""
authors = ["Alexey Duryagin <aiduryagih@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pandas-ta = "^0.3.14-beta.0"
sanic = "^21.12.1"
tinvest = "^3.0.5"
arrow = "^1.2.1"
matplotlib = "^3.5.1"
plotly = "^5.5.0"
nbformat = "^5.1.3"
pyportfolioopt = "^1.5.1"
requests = "^2.27.1"
vectorbt = "^0.23.1"
kaleido = "0.2.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.1"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
